added attack button

--- a/views/play2.erb
+++ b/views/play2.erb
@@ -1,6 +1,7 @@
 
 <%= @player_1 %> vs <%= @player_2 %>
-<div>  <%= @player_2 %>: 45/60HP </div>
+<div> <%= @player_2 %>: 45/60HP </div>
+<div> You attacked your opponent! </div>
 <form action='/attack_response' method="post">
   <button>Attack</button>
 </form>
