--- a/views/play2.erb
+++ b/views/play2.erb
@@ -1,6 +1,6 @@
 
-<%= @player_1 %> vs <%= @player_2 %>
-<div> <%= @player_2 %>: <%= @score %> </div>
+<%= @player1 %> vs <%= @player2 %>
+<div> <%= @player2 %>: <%= @score %> </div>
 <div> You attacked your opponent! </div>
 <form action='/attack_response' method="post">
   <button>Attack</button>
